objects/nRetail__Pricing_Option__c.object
<CustomObject>
    <description>-DEPRECATED- Use the Pricing Option inside LLC_BI This object is used for the pricing matrix options on the offers page of a loan.</description>
    <fields>
        <fullName>nRetail__Amount__c</fullName>
        <description>The principle balance for this pricing option.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__DTI__c</fullName>
        <description>The Debt to Income ratio used to calculate this pricing option.</description>
        <label>Debt to Income ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nRetail__Fees__c</fullName>
        <description>The Financed Fees for the Option</description>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The loan this pricing option relates to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>Pricing_Options</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Monthly_Payment__c</fullName>
        <description>The Monthly Payment required for this option</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Rate__c</fullName>
        <description>The interest rate for this pricing option.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nRetail__Term__c</fullName>
        <description>The term of the loan for this pricing option.</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nRetail__Total_Cost__c</fullName>
        <description>The Total Cost of the loan over its entire life.</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Total_Interest__c</fullName>
        <description>The Total Interest paid over the life of the loan for this option.</description>
        <label>Total Interest</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nRetail__Total_Principal__c</fullName>
        <description>The Total Principal of the loan, including fees.</description>
        <label>Total Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>-D Pricing Option</label>
    <nameField>
        <label>Pricing Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>